--- a/travlr/public/css/style.css
+++ b/travlr/public/css/style.css
@@ -327,9 +327,9 @@ hr {
 	display: block;
 }
 /** Dive Site **/
-#sites li {
+/* #sites li {
 	padding-bottom: 0;
-}
+} */
 #sites li img {
 	float: right;
 	border: 1px solid #2c9688;
