--- a/travlr/app_admin/src/app/trip-card/trip-card.html
+++ b/travlr/app_admin/src/app/trip-card/trip-card.html
@@ -7,6 +7,8 @@
       {{ trip.length }} only {{ trip.perPerson | currency:'USD': 'symbol' }} per person
     </p>
     <p class="card-text" [innerHTML]="trip.description"></p>
+    <button class="btn btn-sm btn-primary mt-2" (click)="editTrip(trip)">Edit Trip</button>
+
   </div>
 </div>
 
