--- a/travlr/app_admin/src/app/trip-listing/trip-listing.html
+++ b/travlr/app_admin/src/app/trip-listing/trip-listing.html
@@ -1,8 +1,13 @@
 <!-- <pre>{{trips | json}}</pre> -->
-<div class="row">
-  <div *ngFor="let trip of trips" class="col-3 mb-4">
-    <app-trip-card [trip]="trip" class="card-deck mt-2"></app-trip-card>
+
+
+<div class="container my-3">
+  <button class="btn btn-primary mb-3" (click)="addTrip()">Add Trip</button>
+
+  <div class="row">
+    <div *ngFor="let trip of trips" class="col-3 mb-4">
+      <app-trip-card [trip]="trip" class="card-deck mt-2"></app-trip-card>
+    </div>
   </div>
 </div>
-
 
