--- a/travlr/app_admin/src/app/trip-listing/trip-listing.html
+++ b/travlr/app_admin/src/app/trip-listing/trip-listing.html
@@ -2,7 +2,7 @@
 
 
 <div class="container my-3">
-  <button class="btn btn-primary mb-3" *ngIf="isLoggedIn()" (click)="addTrip()">Add Trip</button>
+  <button class="btn btn-primary mb-3" *ngIf="isAdmin()" (click)="addTrip()">Add Trip</button>
 
   <div class="row">
     <div *ngFor="let trip of trips" class="col-3 mb-4">
