--- a/travlr/app_admin/src/app/add-trip/add-trip.html
+++ b/travlr/app_admin/src/app/add-trip/add-trip.html
@@ -1,8 +1,10 @@
 <div class="col-md-4">
   <h2 class="text-center">Add Trip</h2>
 
+  <!-- Reactive form for creating a new trip (Enhancement 2: protected by RBAC on backend) -->
   <form *ngIf="addForm" [formGroup]="addForm" (ngSubmit)="onSubmit()">
 
+    <!-- Trip Code -->
     <div class="form-group">
       <label>Code:</label>
       <input type="text" formControlName="code" placeholder="Code" class="form-control"
@@ -12,6 +14,7 @@
       </div>
     </div>
 
+    <!-- Trip Name -->
     <div class="form-group">
       <label>Name:</label>
       <input type="text" formControlName="name" placeholder="Name" class="form-control"
@@ -21,6 +24,7 @@
       </div>
     </div>
 
+    <!-- Length -->
     <div class="form-group">
       <label>Length:</label>
       <input type="text" formControlName="length" placeholder="Length" class="form-control"
@@ -30,6 +34,7 @@
       </div>
     </div>
 
+    <!-- Start Date -->
     <div class="form-group">
       <label>Start:</label>
       <input type="date" formControlName="start" placeholder="Start" class="form-control"
@@ -39,6 +44,7 @@
       </div>
     </div>
 
+    <!-- Resort -->
     <div class="form-group">
       <label>Resort:</label>
       <input type="text" formControlName="resort" placeholder="Resort" class="form-control"
@@ -48,6 +54,7 @@
       </div>
     </div>
 
+    <!-- Per Person Cost -->
     <div class="form-group">
       <label>Per Person:</label>
       <input type="text" formControlName="perPerson" placeholder="Per Person" class="form-control"
@@ -57,6 +64,7 @@
       </div>
     </div>
 
+    <!-- Image -->
     <div class="form-group">
       <label>Image Name:</label>
       <input type="text" formControlName="image" placeholder="Image" class="form-control"
@@ -66,6 +74,7 @@
       </div>
     </div>
 
+    <!-- Description -->
     <div class="form-group">
       <label>Description:</label>
       <input type="text" formControlName="description" placeholder="Description" class="form-control"
@@ -75,7 +84,8 @@
       </div>
     </div>
 
+    <!-- Submit button -->
     <button type="submit" class="btn btn-info">Save</button>
+
   </form>
 </div>
-
