--- a/travlr/app_admin/src/app/edit-trip/edit-trip.html
+++ b/travlr/app_admin/src/app/edit-trip/edit-trip.html
@@ -1,7 +1,11 @@
 <div class="col-md-4">
   <h2 class="text-center">Edit Trip</h2>
+
+  <!-- Reactive form for editing an existing trip -->
+  <!-- Enhancement 2: Editing is protected by RBAC on the backend -->
   <form *ngIf="editForm" [formGroup]="editForm" (ngSubmit)="onSubmit()">
 
+    <!-- Trip Code -->
     <div class="form-group">
       <label>Code:</label>
       <input type="text" formControlName="code" placeholder="Code" class="form-control"
@@ -11,6 +15,7 @@
       </div>
     </div>
 
+    <!-- Trip Name -->
     <div class="form-group">
       <label>Name:</label>
       <input type="text" formControlName="name" placeholder="Name" class="form-control"
@@ -20,6 +25,7 @@
       </div>
     </div>
 
+    <!-- Length -->
     <div class="form-group">
       <label>Length:</label>
       <input type="text" formControlName="length" placeholder="Length" class="form-control"
@@ -29,6 +35,7 @@
       </div>
     </div>
 
+    <!-- Start Date -->
     <div class="form-group">
       <label>Start:</label>
       <input type="date" formControlName="start" placeholder="Start" class="form-control"
@@ -38,6 +45,7 @@
       </div>
     </div>
 
+    <!-- Resort -->
     <div class="form-group">
       <label>Resort:</label>
       <input type="text" formControlName="resort" placeholder="Resort" class="form-control"
@@ -47,6 +55,7 @@
       </div>
     </div>
 
+    <!-- Per Person Cost -->
     <div class="form-group">
       <label>Per Person:</label>
       <input type="text" formControlName="perPerson" placeholder="Per Person" class="form-control"
@@ -56,6 +65,7 @@
       </div>
     </div>
 
+    <!-- Image -->
     <div class="form-group">
       <label>Image Name:</label>
       <input type="text" formControlName="image" placeholder="Image" class="form-control"
@@ -65,6 +75,7 @@
       </div>
     </div>
 
+    <!-- Description -->
     <div class="form-group">
       <label>Description:</label>
       <input type="text" formControlName="description" placeholder="Description" class="form-control"
@@ -74,7 +85,8 @@
       </div>
     </div>
 
+    <!-- Save -->
     <button type="submit" class="btn btn-info">Save</button>
+
   </form>
 </div>
-
