--- a/travlr/app_admin/src/app/navbar/navbar.html
+++ b/travlr/app_admin/src/app/navbar/navbar.html
@@ -1,7 +1,11 @@
 <nav class="navbar navbar-expand navbar-light bg-light">
-  <a class="navbar-brand" href="#"><img src="assets/images/logo.png" style="height:32px"></a>
+  <a class="navbar-brand" href="#">
+    <img src="assets/images/logo.png" style="height:32px">
+  </a>
 
   <div class="navbar-nav ms-auto">
+
+    <!-- Main trips link -->
     <a class="nav-link" routerLink="" routerLinkActive="active">Trips</a>
 
     <!-- Show when NOT logged in -->
@@ -9,5 +13,10 @@
 
     <!-- Show when logged in -->
     <a class="nav-link" (click)="onLogout()" *ngIf="isLoggedIn()">Log Out</a>
+
+    <!-- Enhancement 3:
+         New admin-only link to the user directory page -->
+    <a class="nav-link" *ngIf="auth.isAdmin()" routerLink="/admin/users">Users</a>
+
   </div>
 </nav>
